# wiki-keeper

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/actions/wiki-keeper-nightly/: action.yml
.github/workflows/: ci.yml
.wiki-keeper/: roadmap.md  schema.md  state.json
.wiki-keeper/sources/prs/: pr_184_summary.md
.wiki-keeper/wiki/: index.md  log.md
.wiki-keeper/wiki/modules/: Auth Service.md
docs/: AGENTS_TEMPLATE.md  DEPLOYMENT.md  HANDOFF.md
docs/workflows/: wiki-keeper-nightly.yml
mcp_server/: __init__.py  audits.py  cli.py  frontmatter.py  git_delta.py  index.py  init_bootstrap.py  init_corpus.py  lint.py  llm.py  monorepo_inventory.py  nightly.py  orchestrator.py  pages.py  paths.py  readers.py  roadmap.py  search.py  server.py  site_scaffold.py  source_scan.py  state.py  storage.py  tools.py  validate.py  wikilog.py
mcp_server/app/: __init__.py  cli.py  server.py  tools.py
mcp_server/bootstrap/: __init__.py  init_bootstrap.py  init_corpus.py  monorepo_inventory.py  source_scan.py
mcp_server/core/: __init__.py  paths.py  storage.py
mcp_server/integrations/: __init__.py  git_delta.py  llm.py  site_scaffold.py
mcp_server/site_template/: package-lock.json  package.json
mcp_server/site_template/app/: globals.css  layout.tsx  page-view.tsx  page.tsx
mcp_server/site_template/app/wiki/[category]/[slug]/: page.tsx
mcp_server/site_template/app/wiki/log/: page.tsx
mcp_server/site_template/lib/: generated-config.ts  wiki.test.ts  wiki.ts
mcp_server/tests/: conftest.py  test_audits.py  test_frontmatter.py  test_git_delta.py  test_initialize_wiki.py  test_integration_smoke.py  test_invariants.py  test_nightly.py  test_roadmap.py  test_safety.py  test_server_registry.py  test_site_scaffold.py  test_state.py  test_validate.py
mcp_server/wiki/: __init__.py  audits.py  index.py  lint.py  nightly.py  roadmap.py  search.py  state.py  validate.py  wikilog.py
